Changing github link & removing discord

--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 
             <nav style="text-shadow: 1px 1px 30px rgb(0, 0, 0);">
                 <li>
-                    <ul><a href="https://github.com/LJ200186">Github</a></ul> / 
-                    <ul><a href="https://discord.com/users/22165341162242048">Discord</a></ul> / 
+                    <ul><a href="https://github.com/luk3-2400">Github</a></ul> / 
                     <ul><a href="https://twitter.com/Luk3_2400">Twitter</a></ul>
                 </li>
             </nav>
