--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <section>
 
             <img src="/assets/LUK3.png" alt="Luk3 Logo" draggable="false">
-            <p style="text-shadow: 1px 1px 30px rgb(0, 0, 0);">Student & Software developer</p>
+            <p style="text-shadow: 1px 1px 30px rgb(0, 0, 0);">Student & Software engineer</p>
 
             <nav style="text-shadow: 1px 1px 30px rgb(0, 0, 0);">
                 <li>
